add book collection project. and adjust service content

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         </div>
                         <h3>Software Developer</h3>
                         <p> Understand the concept of SWE: Analyzing user requirements by designing, building,
-                            and testing the software application.
+                            and testing the software application. Utilize the agile Scrum method for SWE.
                         </p>
                     </div>
                 </div>
@@ -335,9 +335,9 @@
                             <i class="fas fa-laptop-code"></i>
                         </div>
                         <h3>Full-Stack Developer</h3>
-                        <p>I learned Java at school, but I was in love with the moment I learned JavaScript.
-                            I have experience doing full stack web application. For front-end, I use React. For database,
-                            I use MySQL. For back-end, I use PHP.
+                        <p>I learned Java at school, but I was in love with the moment I learned JavaScript (self-taught).
+                            I have experience doing full stack web application. MongoDb, ExpressJs are for backend.
+                            Frontend has ReactJs, NodeJs.
                         </p>
                     </div>
                 </div>
@@ -507,6 +507,38 @@
                                         and Customer functionality; Admin functionality has 3 side-functions that would be: Add, Delete, Update item from the menu.
                                         Customer functionality has 3 side-functions: View Menu, Choose items from the menu and view Cart. This full-stack web application is used MERN stack.
 
+                                    </p>
+                                </div>
+                                <div class="info">
+                                    <h3>Project info</h3>
+                                    <ul>
+                                        <li>Date - <span> 2022 </span></li>
+                                        <li> Tools - <span> MongoDb, ExpressJs, ReactJs, NodeJs, JavaScript </span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- portfolio item details end -->
+                    </div>
+                </div>
+                <!-- portfolio item  -->
+                <div class="portfolio-item" data-category="web-application">
+                    <div class="portfolio-item-inner outer-shadow">
+                        <div class="portfolio-item-img">
+                            <img src="/screenshots/Project6/Project1.png" alt="Book Collection" data-screenshots="/screenshots/Project6/Project1.png,
+                            /screenshots/Project6/Project2.png">
+                            <!-- view porject btn -->
+                            <span class="view-project"> view project </span>
+                        </div>
+                        <p class="portfolio-item-title">Book Collection Web Application</p>
+                        <!-- portfolio item details -->
+                        <div class="portfolio-item-details">
+                            <div class="row">
+                                <div class="description">
+                                    <h3>Project Brief:</h3>
+                                    <p>This is a full-stack web application for Book Collection; this project has 2 main functionality:
+                                        Add and Delete Book Collection in the database. There will be a form to add new book and a collection 
+                                        to require data from database and a button to delete that data.
                                     </p>
                                 </div>
                                 <div class="info">
