--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         I first chose Chemical Engineering as my major, but I realized I love coding more than doing research in the lab.
                         Here are my Resume, Contact, Skills, Experiences, Education, and Projects.
                     </p>
-                    <a href="Long-Nguyen-Resume.pdf" class="btn-1 outer-shadow hover-in-shadow" target="blank">My Resume</a>
+                    <a href="Long_Nguyen_Resume.pdf" class="btn-1 outer-shadow hover-in-shadow" target="blank">My Resume</a>
                     <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire me</a>
                 </div>
             </div>
