--- a/index.html
+++ b/index.html
@@ -155,11 +155,13 @@
                 </div>
                 <div class="about-info">
                     <p><span>Hi! I'm Long Nguyen.</span> I have a Bachelor of Science degree in Computer Science.
-                        I'm motivated to develop my skill as software engineer, specifically web development (Full-Stack developer).
-                        I first chose Chemical Engineering as my major, but I realized I love coding more than doing research in the lab.
-                        Here are my Resume, Contact, Skills, Experiences, Education, and Projects.
+                        I'm specilized in Java Back-end Development with Spring Boot Framework, ReactJs as Front-end Framework, 
+                        also I have exposed to Django REST Framework.
+                        I did not have reference between Front-end, Back-end or Full-Stack Developer, but I started realizing that I love Backend.
+                        I love manipulating data and return them to Frontend. However, I was motivated to be Full-Stack Developer during my time at 
+                        ISODS (a non-profit organization). Here are my Resume, Contact, Skills, Experiences, Education, and Projects.
                     </p>
-                    <a href="Long-Nguyen-Resume(revised1).pdf" class="btn-1 outer-shadow hover-in-shadow" target="blank">My Resume</a>
+                    <a href="Resume-Long-Nguyen.pdf" class="btn-1 outer-shadow hover-in-shadow" target="blank">My Resume</a>
                     <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire me</a>
                 </div>
             </div>
@@ -176,12 +178,54 @@
             <div class="row">
                 <div class="skills tab-content active">
                     <div class="row">
+                        <!-- Java Skill -->
+                        <div class="skill-item">
+                            <p>Java</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(95% - 14px)">
+                                    <span>95%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Java skill end-->
+                        <!-- Spring Boot Skill -->
+                        <div class="skill-item">
+                            <p>Spring Boot</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(95% - 14px)">
+                                    <span>95%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Spring Boot skill end-->
+
+                        <!-- Python Skill -->
+                        <div class="skill-item">
+                            <p>Python</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(60% - 14px)">
+                                    <span>60%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Python skill end-->
+                        <!-- Django Skill -->
+                        <div class="skill-item">
+                            <p>Django</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(50% - 14px)">
+                                    <span>50%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Django skill end-->
+
                         <!-- HTML Skill -->
                         <div class="skill-item">
                             <p>HTML5</p>
                             <div class="progress inner-shadow">
-                                <div class="progress-bar" style="width: calc(70% - 14px)">
-                                    <span>70%</span>
+                                <div class="progress-bar" style="width: calc(60% - 14px)">
+                                    <span>60%</span>
                                 </div>
                             </div>
                         </div>
@@ -200,32 +244,24 @@
                         <div class="skill-item">
                             <p>JavaScript</p>
                             <div class="progress inner-shadow">
-                                <div class="progress-bar" style="width: calc(80% - 14px)">
-                                    <span>80%</span>
+                                <div class="progress-bar" style="width: calc(70% - 14px)">
+                                    <span>70%</span>
                                 </div>
                             </div>
                         </div>
                         <!-- JavaScript skill end-->
-                        <!-- Java Skill -->
+
+                        <!-- ReactJs Skill -->
                         <div class="skill-item">
-                            <p>Java</p>
+                            <p>ReacJs</p>
                             <div class="progress inner-shadow">
-                                <div class="progress-bar" style="width: calc(80% - 14px)">
-                                    <span>80%</span>
+                                <div class="progress-bar" style="width: calc(60% - 14px)">
+                                    <span>60%</span>
                                 </div>
                             </div>
                         </div>
-                        <!-- Java skill end-->
-                        <!-- Python Skill -->
-                        <div class="skill-item">
-                            <p>Python</p>
-                            <div class="progress inner-shadow">
-                                <div class="progress-bar" style="width: calc(30% - 14px)">
-                                    <span>30%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Python skill end-->
+                        <!-- ReactJs skill end-->
+                        
                     </div>
                 </div>
             </div>
@@ -238,6 +274,34 @@
                             <div class="row">
                                 <!-- timeline item start -->
                                 <div class="timeline-item">
+                                    <div class="timeline-item-inner outer-shadow">
+                                        <i class="fas fa-briefcase icon"></i>
+                                        <span>March 2023 - Present </span>
+                                        <h3> Software Engineer </h3>
+                                        <h4> The International Society of Data Scientists </h4>
+                                        <p> Developed Backend Application with Django REST framework to handle RESTful API calls: Competition API, Category API, Document API, Competition API.
+                                            Created models to map with corresponding entities in SQLite. Developed Frontend Application with ReactJs: Log-in, Competition Page
+                                         </p>
+                                    </div>
+                                </div>
+                                <!-- timeline item end -->
+                                <!-- timeline item start -->
+                                <div class="timeline-item">
+                                    <div class="timeline-item-inner outer-shadow">
+                                        <i class="fas fa-briefcase icon"></i>
+                                        <span>July 2022 - Present </span>
+                                        <h3> Software Developer </h3>
+                                        <h4>BeaconFire Solution Inc</h4>
+                                        <p> Trained to be Java Backend Developer. I worked with 3 others in Microservice Architecture 
+                                            to develop Backend Application called Human Resource, there were 4 services total: Employee, Housing, Authentication, Application. 
+                                            We utilized Spring Boot to handle RESTful API calls, 
+                                            created Hibernate framework to map entity classes with their corresponding MySQL tables and attributes.
+                                         </p>
+                                    </div>
+                                </div>
+                                <!-- timeline item end -->
+                                 <!-- timeline item start -->
+                                 <div class="timeline-item">
                                     <div class="timeline-item-inner outer-shadow">
                                         <i class="fas fa-briefcase icon"></i>
                                         <span>June 2021 - Sep 2021</span>
@@ -253,7 +317,8 @@
                     </div>
                 </div>
             </div>
-            <!-- Experience end -->
+
+            
             <!-- Education start -->
             <div class="row">
                 <div class="education tab-content">
@@ -265,10 +330,10 @@
                                     <div class="timeline-item-inner outer-shadow">
                                         <i class="fas fa-graduation-cap icon"></i>
                                         <span>Sep, 2019 - May, 2022</span>
-                                        <h3> Bachelor Degree in Science </h3>
+                                        <h3> Bachelor of Science </h3>
                                         <h4>Salem State University</h4>
-                                        <p>Major: Computer Science, Concentration in Software Engineering</p>
-                                        <p>Achievements: Dean's List Fall 2021</p>
+                                        <p>Concentration in Software Engineering</p>
+                                        <p>Achievements: Dean's List Fall</p>
                                     </div>
                                 </div>
                                 <!-- timeline item end -->
@@ -279,7 +344,7 @@
                                         <span>Sep, 2015 - Sep, 2019</span>
                                         <h3> High School Degree</h3>
                                         <h4>Green River Community College</h4>
-                                        <p>I joined and finished "High School Completion" program at GRCC; I have taken
+                                        <p>I enrolled and finished "High School Completion" program at GRCC; I have taken
                                             many Business classes here at GRCC.</p>
                                     </div>
                                 </div>
