--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         I love manipulating data and return them to Frontend. However, I was motivated to be Full-Stack Developer during my time at 
                         ISODS (a non-profit organization). Here are my Resume, Contact, Skills, Experiences, Education, and Projects.
                     </p>
-                    <a href="Resume-Long-Nguyen.pdf" class="btn-1 outer-shadow hover-in-shadow" target="blank">My Resume</a>
+                    <a href="Resume-Long-Nguyen.docx" class="btn-1 outer-shadow hover-in-shadow" target="blank">My Resume</a>
                     <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire me</a>
                 </div>
             </div>
