Change portfolio summary

--- a/index.html
+++ b/index.html
@@ -154,12 +154,9 @@
                     </div>
                 </div>
                 <div class="about-info">
-                    <p><span>Hi! I'm Long Nguyen.</span> I have a Bachelor of Science degree in Computer Science.
-                        I'm specilized in Java Back-end Development with Spring Boot Framework, ReactJs as Front-end Framework, 
-                        also I have exposed to Django REST Framework.
-                        I did not have reference between Front-end, Back-end or Full-Stack Developer, but I started realizing that I love Backend.
-                        I love manipulating data and return them to Frontend. However, I was motivated to be Full-Stack Developer during my time at 
-                        ISODS (a non-profit organization). Here are my Resume, Contact, Skills, Experiences, Education, and Projects.
+                    <p><span>Hi! I'm Long Nguyen.</span>  hold a Bachelor of Science degree in Computer Science with a specialization in Java Backend development using the Spring Boot Framework. I am also proficient in ReactJs as a Front-end Framework and have exposure to Django REST Framework. While my preference lies in Backend development, I am well-versed in Frontend technologies and open to full-stack development opportunities.
+
+                        My passion lies in manipulating data and delivering them to the Frontend. This drive was further fueled during my time at ISODS, a non-profit organization, where I was motivated to become a Full-Stack Developer. Please find my resume, contact information, skills, experiences, education, and projects detailed below.
                     </p>
                     <a href="Resume-Long-Nguyen.docx" class="btn-1 outer-shadow hover-in-shadow" target="blank">My Resume</a>
                     <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire me</a>
