--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="about-info">
-                    <p><span>Hi! I'm Long Nguyen.</span>  hold a Bachelor of Science degree in Computer Science with a specialization in Java Backend development using the Spring Boot Framework. I am also proficient in ReactJs as a Front-end Framework and have exposure to Django REST Framework. While my preference lies in Backend development, I am well-versed in Frontend technologies and open to full-stack development opportunities.
+                    <p><span>Hi! I'm Long Nguyen.</span> I hold a Bachelor of Science degree in Computer Science with a specialization in Java Backend development using the Spring Boot Framework. I am also proficient in ReactJs as a Front-end Framework and have exposure to Django REST Framework. While my preference lies in Backend development, I am well-versed in Frontend technologies and open to full-stack development opportunities.
 
                         My passion lies in manipulating data and delivering them to the Frontend. This drive was further fueled during my time at ISODS, a non-profit organization, where I was motivated to become a Full-Stack Developer. Please find my resume, contact information, skills, experiences, education, and projects detailed below.
                     </p>
